--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@
             ctx.strokeStyle = 'rgba(118, 196, 75, 0.1)'; // #76C44B with low alpha
             ctx.lineWidth = 1;
 
-            const size = 60; // radius
+            const size = 60; // radius.
             const h = Math.sqrt(3) * size; // height of one equilateral triangle
             const w = 2 * size;
 
