--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </p>
                 </div>
                 <div class="col-lg-6 home-image-container">
-                    <img src="image/ourteam.jpg" alt="Weida HVAC Team">
+                    <img src="image/ourteam.png" alt="Weida HVAC Team">
                 </div>
             </div>
         </div>
@@ -81,7 +81,7 @@
                             <img src="image/certificate.jpg" alt="Weida HVAC" class="w-100 rounded-3 shadow">
                         </div>
                         <div class="col-lg-8">
-                            <p class="text-white">Established in 2019, we are a service-oriented company specializing in the design, installation, and maintenance of air conditioning and ventilation systems. Over the years, we have built a strong reputation for delivering high-quality solutions that meet the specific needs of our clients. We are proud to be an authorized distributor of Hisense and Gree products, and we have successfully installed VRF central air conditioning systems for multiple residential and commercial buildings, particularly in Pasay and Parañaque City, Philippines. Our team is highly skilled and experienced in handling the installation, commissioning, and maintenance of large-scale HVAC equipment from leading brands such as Daikin, Mitsubishi, Gree, and Hisense. Through our dedication to excellence and customer satisfaction, we continue to provide efficient and reliable solutions tailored to every project's unique requirements.</p>
+                            <h5 class="text-white">Established in 2019, we are a service-oriented company specializing in the design, installation, and maintenance of air conditioning and ventilation systems. Over the years, we have built a strong reputation for delivering high-quality solutions that meet the specific needs of our clients. We are proud to be an authorized distributor of Hisense and Gree products, and we have successfully installed VRF central air conditioning systems for multiple residential and commercial buildings, particularly in Pasay and Parañaque City, Philippines. Our team is highly skilled and experienced in handling the installation, commissioning, and maintenance of large-scale HVAC equipment from leading brands such as Daikin, Mitsubishi, Gree, and Hisense. Through our dedication to excellence and customer satisfaction, we continue to provide efficient and reliable solutions tailored to every project's unique requirements.</h5>
                         </div>
                     </div>
                 </div>
@@ -132,26 +132,38 @@
                     </div>
                 </div>
             </div>
-
             <div id="our-vision-section" class="card mb-4 rounded-3 shadow border-secondary overflow-hidden">
                 <div class="card-header p-3">
                     <h2 class="h2 fw-bold text-weida-green text-center mb-0">Our Vision</h2>
                 </div>
-                <div class="card-body p-5 text-white text-center">
-                    <img src="image/ourvison.png" alt="Our Vision" class="w-100 rounded-3 shadow mb-4">
-                    <p class="mb-0">To be a leading global HVAC solutions provider, recognized for our expertise in air conditioning, ventilation, and maintenance services.</p>
+                <div class="card-body p-5">
+                    <div class="row align-items-center">
+                        <div class="col-lg-6" >
+                            <img src="image/ourvison.png" alt="Our Vision" class="w-100">
+                        </div>
+                        <div class="col-lg-6 mb-4 mb-lg-0">
+                            <h5 class="text-white">To be a leading global HVAC solutions provider, recognized for our expertise in air conditioning, ventilation, and maintenance services. We aspire to build a strong international presence by offering cutting-edge technologies, exceptional customer service, and sustainable solutions that create comfort and efficiency across the world.</h5>
+                        </div>
+                    </div>
                 </div>
             </div>
 
             <div id="our-mission-section" class="card mb-4 rounded-3 shadow border-secondary overflow-hidden">
                 <div class="card-header p-3">
-                    <h2 class="h2 fw-bold text-weida-green text-center mb-0">Our Mission</h2>
+                    <h2 class="h1 fw-bold text-weida-green text-center mb-0">Our Mission</h2>
                 </div>
-                <div class="card-body p-5 text-white text-center">
-                    <img src="image/ourmission.png" alt="Our Mission" class="w-100 rounded-3 shadow mb-4">
-                    <p class="mb-0">To deliver world-class HVAC solutions through innovative design, professional installation, and reliable maintenance services, ensuring optimal comfort and efficiency for our clients.</p>
+                <div class="card-body p-5">
+                    <div class="row align-items-center">
+                        <div class="col-lg-6 mb-4 mb-lg-0">
+                            <h5 class="text-white">To deliver world-class HVAC solutions through innovative design, professional installation, and reliable maintenance services. We aim to provide energy-efficient and sustainable systems by partnering with trusted global brands, ensuring comfort, quality, and value for our clients worldwide.</h5>
+                        </div>
+                        <div class="col-lg-6">
+                            <img src="image/ourmission.png" alt="Weida HVAC" class="w-100">
+                       </div> 
+                    </div>
                 </div>
             </div>
+
 
             <div id="organizational-chart-section" class="card mb-4 rounded-3 shadow border-secondary overflow-hidden">
                 <div class="card-header p-3">
@@ -215,7 +227,7 @@
                                 <img src="image/aspire3.png" alt="Daikin Split Units" class="project-image">
                                 <div class="project-overlay">
                                     <h4>Split Units</h4>
-                                    <p>Included Daikin 1 is to 1 split Units. Project cost: 32,000,000 Pesos.</p>
+                                    <p>Included Daikin 1 is to 1 split Units. Project cost: 32,000,000 Pesos / 2,051,616.00 AED.</p>
                                 </div>
                             </div>
                             <div class="project-image-wrapper">
@@ -249,14 +261,14 @@
                                 <img src="image/huachen3.png" alt="Ceiling Cassette Units" class="project-image">
                                 <div class="project-overlay">
                                     <h4>Ceiling Cassette</h4>
-                                    <p>Installation of Ceiling Cassette indoor units. Project cost: 28,000,000 Pesos.</p>
+                                    <p>Installation of Ceiling Cassette indoor units. Project cost: 28,000,000 Pesos / 1,795,164.00 AED.</p>
                                 </div>
                             </div>
                             <div class="project-image-wrapper">
                                 <img src="image/huachen4.png" alt="Ongoing Maintenance" class="project-image">
                                 <div class="project-overlay">
                                     <h4>Maintenance & Repair</h4>
-                                    <p>Maintenance and repair services are provided for the entire building.</p>
+                                    <p>Maintenance and repair services are provided since 2020</p>
                                 </div>
                             </div>
                         </div>
@@ -289,7 +301,7 @@
                                 <img src="image/royal4.png" alt="Project Site" class="project-image">
                                 <div class="project-overlay">
                                     <h4>Total Cost</h4>
-                                    <p>Project cost: 55,000,000 Pesos.</p>
+                                    <p>Project cost: 55,000,000 Pesos / 3,514,060.00 AED.</p>
                                 </div>
                             </div>
                         </div>
@@ -322,7 +334,7 @@
                                 <img src="image/centrium4.png" alt="VRF System" class="project-image">
                                 <div class="project-overlay">
                                     <h4>Additional VRF System</h4>
-                                    <p>Additional VRF System installation. Project cost: 9,000,000 Pesos.</p>
+                                    <p>Additional VRF System installation. Project cost: 9,000,000 Pesos / 575,028.00 AED.</p>
                                 </div>
                             </div>
                         </div>
@@ -355,7 +367,7 @@
                                 <img src="image/ytower4.png" alt="Testing and Commissioning" class="project-image">
                                 <div class="project-overlay">
                                     <h4>Testing & Commissioning</h4>
-                                    <p>Full testing and commissioning. Project cost: 8,000,000 Pesos.</p>
+                                    <p>Full testing and commissioning. Project cost: 8,000,000 Pesos / 511,136.00AED.</p>
                                 </div>
                             </div>
                         </div>
@@ -388,7 +400,7 @@
                                 <img src="image/ayala4.png" alt="Project Site" class="project-image">
                                 <div class="project-overlay">
                                     <h4>Total Cost</h4>
-                                    <p>Project cost: 3,500,000 Pesos.</p>
+                                    <p>Project cost: 3,500,000 Pesos / 223,622.00 AED.</p>
                                 </div>
                             </div>
                         </div>
@@ -414,20 +426,20 @@
                                 <img src="image/garden3.png" alt="Commissioning and Testing" class="project-image">
                                 <div class="project-overlay">
                                     <h4>Commissioning & Testing</h4>
-                                    <p>Full commissioning and testing of all installed units.</p>
+                                    <p>Full commissioning and testing of all installed units. Project cost: 10,800,000 Pesos / 699,559.00 AED</p>
                                 </div>
                             </div>
                             <div class="project-image-wrapper">
                                 <img src="image/garden4.png" alt="Maintenance" class="project-image">
                                 <div class="project-overlay">
                                     <h4>Maintenance & Repair</h4>
-                                    <p>Maintenance and repair services are provided on-site.</p>
+                                    <p>Maintenance and repair services are provided</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="mb-5">
-                        <h3 class="lead text-center mb-4">Project VIII : 2024 - Central Link Project</h3>
+                        <h3 class="lead text-center mb-4">Project VIII : 2024 Up to Present - Central Link Project </h3>
                         <div class="project-images-grid">
                             <div class="project-image-wrapper">
                                 <img src="image/central1.png" alt="Central Link Project" class="project-image">
@@ -447,14 +459,14 @@
                                 <img src="image/central3.png" alt="Commissioning and Testing" class="project-image">
                                 <div class="project-overlay">
                                     <h4>Commissioning & Testing</h4>
-                                    <p>Full commissioning and testing is underway.</p>
+                                    <p>Full commissioning and testing</p>
                                 </div>
                             </div>
                             <div class="project-image-wrapper">
                                 <img src="image/central4.png" alt="Total Cost" class="project-image">
                                 <div class="project-overlay">
                                     <h4>Total Cost</h4>
-                                    <p>Project cost: 170,800,000 Pesos.</p>
+                                    <p>Project cost: 170,800,000 Pesos/ 10,912,753.60 AED.</p>
                                 </div>
                             </div>
                         </div>
