new adjustment removing in this presentaion on home and editing css for mobile view

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="col-lg-6 home-content">
                     <h1 class="text-white text-uppercase">WELCOME TO <br><span class="text-weida-green">WEIDA HVAC</span></h1>
                     <p class="lead text-white mt-4">
-                        In this presentation, we will provide you with an overview of our company profile, our mission and vision, and a showcase of our past projects. Since our establishment in 2019, Weida HVAC has been dedicated to delivering high-quality HVAC solutions, specializing in the design, installation, and maintenance of air conditioning and ventilation systems.
+                         We will provide you with an overview of our company profile, our mission and vision, and a showcase of our past projects. Since our establishment in 2019, Weida HVAC has been dedicated to delivering high-quality HVAC solutions, specializing in the design, installation, and maintenance of air conditioning and ventilation systems.
                         <br><br>
                         Join us as we walk you through our journey, achievements, and commitment to providing world-class comfort and efficiency.
                     </p>
